--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,11 @@ repositories {
 dependencies {
 	compile('org.projectlombok:lombok:1.18.8')
 	compile('com.alibaba:fastjson:1.2.62')
-	implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+//	implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
+//	implementation 'org.springframework.boot:spring-boot-starter-web'
+//	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+//		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+//	}
 }
 
 test {
